--- a/src/views/MovieDetails.module.css
+++ b/src/views/MovieDetails.module.css
@@ -48,3 +48,13 @@
   object-fit: cover;
   margin-right: 5px;
 }
+
+.link {
+  text-decoration: none;
+  cursor: pointer;
+  padding: 0 40px 0 40px;
+  font-size: 18px;
+}
+.link:hover {
+  color: blue;
+}
