--- a/src/views/MoviePage.module.css
+++ b/src/views/MoviePage.module.css
@@ -14,6 +14,7 @@
   padding-inline-start: 0px;
   overflow: auto;
   transition: opacity 0.75s;
+  text-decoration: none;
 }
 
 .li {
@@ -44,6 +45,7 @@
   color: black;
   font-size: 20px;
   padding: 5px;
+  text-decoration: none;
 }
 
 .link {
